# TradingSimulator

./: .gitignore  CMakeLists.txt
includes/: LimitOrder.hpp  MarketOrder.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  StopOrder.hpp
src/: MatchingEngine.cpp  OrderBook.cpp  main.cpp
tests/: CMakeLists.txt  test_matching_engine.cpp  test_order_book.cpp
